--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ retry-requests==2.0.0
 requests-cache==1.2.1
 openmeteo_requests==1.3.0
 dict2xml==1.7.6
-openai==1.54.5
+openai==1.57.4
+httpx==0.27.2
